# lineaf_parser

./: .env.example  .gitignore  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  парсинг цен.ipynb
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: askona-ns-error-abort.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-scrapers/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-dashboard/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
src/lineaf/: config.py  database.py  main.py  run_scrapers.py  scheduler.py
src/lineaf/api/: prices.py  products.py  runs.py
src/lineaf/dashboard/: app.py
src/lineaf/models/: __init__.py  price_snapshot.py  product.py  scrape_run.py
src/lineaf/scrapers/: askona.py  base.py  ormatek.py  ormatek_uc.py  pipeline.py  sonum.py  utils.py
tests/: conftest.py  test_api.py  test_models.py  test_models_import.py  test_pipeline.py  test_scheduler.py  test_scrapers.py  test_scrapers_ormatek.py  test_scrapers_sonum.py
