[project]
name = "lineaf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "camoufox>=0.4.11",
    "fastapi>=0.135.1",
    "nodriver>=0.48.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "playwright-stealth>=2.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lineaf"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
